# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import cryptoRouter from "./crypto";
+import ordersRouter from "./orders";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(productsRouter);
+router.use(cryptoRouter);
+router.use(ordersRouter);
+router.use(adminRouter);
 
 export default router;
